# autobot-nomad

./: pyproject.toml  requirements.txt  schema.ipynb  schema.py  sintering.py  thin_film_synthesis_schema_package.archive.yaml
Ed/: ahalder_Batch 160_1_0sybgat4t5zas_run1_spec_run.h5.archive.json  parse_scopefoundry_h5.ipynb  schema_package.archive.yaml  scopefoundry_schema_package.archive.yaml  test1.h5.archive.json
examples/data/cow_tutorial/: Tutorial.ipynb  example.schema.yaml
examples/data/json_transformer/: basic_transformation.json  complex_transformation.json  comprehensive_example.json  conditional_transformation_met.json  conditional_transformation_not_met.json  (+13 more)
examples/metainfo/: data_frames.py
examples/plugins/: app.py  columns.py  dashboard.py  menu.py
nomad-perovskite-schema/: README.md  pyproject.toml  setup.cfg  setup.py
nomad-perovskite-schema/examples/: pipette_quenching_example.py  spin_coating_example.py  whirl_spin_coating_example.py
nomad-perovskite-schema/src/nomad_perovskite_schema/: __init__.py
nomad-perovskite-schema/src/nomad_perovskite_schema/basesections/: dispense_profile.py  perovskite_synthesis.py  process_steps.py
nomad-perovskite-schema/src/nomad_perovskite_schema/metainfo/: dispense_profile.py  perovskite_synthesis.py  process_steps.py
nomad-perovskite-schema/src/nomad_perovskite_schema/utils/: unit_conversion.py
nomad-perovskite-schema/src/tests/: test_perovskite_synthesis.py  test_process_steps.py
slides/: api.ipynb  api.rest  perovskite-solar-cells-database_schemata.uml  process.md  schema.uml  schemata.uml
(+3 files in other folders)
