[metadata]
name = nomad-perovskite-schema
version = 0.1.0
description = A schema for perovskite film synthesis processes using NOMAD base sections.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/nomad-perovskite-schema
license = MIT

[options]
packages = find:
install_requires =
    nomad
    numpy
    scipy

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    nomad-perovskite-schema = nomad_perovskite_schema.__main__:main